<resources>
    <string name="app_name">Contacts</string>
    <string name="continuee">Continue</string>
    <string name="favourites">Favourites</string>
    <string name="recents">Recents</string>
    <string name="contacts">Contacts</string>
    <string name="setting">Setting</string>
    <string name="add">Add</string>
    <string name="search_contact">Search Contact</string>
    <string name="select_contact">Select Contact</string>
    <string name="no_data_found">No Data Found</string>
    <string name="save">Save</string>
    <string name="no_favourites_found">No Favourites Found</string>
    <string name="set_as_default">Set Contacts as Default</string>
    <string name="default_phone_dialer">Default Phone Dialer</string>
    <string name="contact_can_start_receive_calls_if_it_s_your_default_app">Contact can start &amp; Receive calls if it’s your default app</string>
    <string name="contact_info">Contact Info</string>
    <string name="edit">Edit</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="share_contact">Share Contact</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="remove_from_favourite_list">Remove from Favourite list</string>
    <string name="add_to_favourite_list">Add to Favourite list</string>
    <string name="unblock_contact">Unblock Contact</string>
    <string name="block_contact">Block Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="save_to">Save to</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_updated">Contact Updated!</string>
    <string name="failed_to_update_contact">Failed to update contact</string>
    <string name="contact_saved">Contact Saved!</string>
    <string name="failed_to_save_contact">Failed to save contact</string>
    <string name="please_enter_name_and_phone_number">Please enter name and phone number</string>
    <string name="rename">Rename</string>
    <string name="rename_custom_field">Rename Custom field</string>
    <string name="call_history">Call History</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="enter_a_valid_number">Enter a valid number</string>
    <string name="add_number">Add Number</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="no_contacts_yet">No Contacts yet</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="descending">Descending</string>
    <string name="move_to_recycle_bin">Move to Recycle bin?</string>
    <string name="this_contact_will_be_removed_from_all_your_synced_devices">This contact will be removed from all your synced devices</string>
    <string name="delete">Delete</string>
    <string name="app_language">App Language</string>
    <string name="theme">Theme</string>
    <string name="call_back_screen">Call Back Screen</string>
    <string name="blocked_numbers">Blocked Numbers</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="import_from_file">Import From File</string>
    <string name="export_to_file">Export to File</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="name_format">Name Format</string>
    <string name="sort_by">Sort By</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="system_default">System Default</string>
    <string name="see_call_details_instantly_after_hanging_up_including_call_duration_and_quick_action_like_redial_and_messaging_turn_it_on_for_a_better_calling_experience">See call details instantly after hanging up, including call duration and quick action like redial and messaging. Turn it on for a better calling experience!</string>
    <string name="unknown">Unknown</string>
    <string name="block_calls_from_unidentified_callers">Block calls from unidentified callers</string>
    <string name="you_won_t_receive_calls_or_text_from_blocked_numbers">You won’t receive calls or text from blocked numbers.</string>
    <string name="unblock">Unblock</string>
    <string name="unblocked">Unblocked</string>
    <string name="blocked">Blocked</string>
    <string name="contact_that_have_been_in_the_bin_for_more_than_30_days_will_be_deleted_forever">Contact that have been in the bin for more than 30 days will be deleted forever.</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="contact_moved_to_bin">Contact moved to bin</string>
    <string name="failed_to_move_contact">Failed to move contact</string>
    <string name="share">Share</string>
    <string name="block">Block</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="failed_to_set_ringtone">Failed to Set Ringtone</string>
    <string name="all">All</string>
    <string name="recent_viewed">Recent Viewed</string>
    <string name="recent_added">Recent Added</string>
    <string name="clear_recently_added">Clear Recently Added</string>
    <string name="clear_recently_viewed">Clear Recently Viewed</string>
    <string name="clear">Clear</string>
    <string name="are_you_sure_want_to_clear_all_recently_added">Are you sure want to clear all recently added?</string>
    <string name="are_you_sure_want_to_clear_all_recently_viewed">Are you sure want to clear all recently viewed?</string>
    <string name="ascending">Ascending</string>
    <string name="deselect_all">Deselect All</string>
    <string name="empty_recycle_bin">Empty Recycle Bin</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="duration">Duration :</string>
    <string name="can_t_talk_right_now">Can’t talk right now</string>
    <string name="i_ll_call_you_later">I’’ll call you Later</string>
    <string name="i_m_on_my_way">I’m on my way</string>
    <string name="can_t_talk_right_now_call_me_later">Can’t talk right now, call me later</string>
    <string name="write_personal_message">Write personal message</string>
    <string name="view_contact">View Contact</string>
    <string name="send_message">Send Message</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="remind_me_about">Remind me About</string>
    <string name="first_name_first">First Name First</string>
    <string name="last_name_first">Last Name First</string>
    <string name="no_messaging_app_found">No messaging app found</string>
    <string name="whatsapp_not_installed">WhatsApp not installed.</string>
    <string name="contact_restored">Contact restored</string>
    <string name="failed_to_restore_contact">Failed to restore contact</string>
    <string name="empty_bin">Empty Bin</string>
    <string name="are_you_sure_to_delete_all_contacts_from_bin_you_cannot_recover_it">Are you sure to delete all contacts from bin. You cannot recover it.</string>
    <string name="remove">Remove</string>
    <string name="restore_contacts">Restore Contacts?</string>
    <string name="are_you_sure_to_restore_selected_contacts">Are you sure to restore selected contacts?</string>
    <string name="restore">Restore</string>
    <string name="are_you_sure_to_delete_selected_contacts_forever_you_cannot_recover_it">Are you sure to delete selected contacts forever? You cannot recover it.</string>
    <string name="no_bluetooth_device_connected">No Bluetooth device connected</string>
    <string name="no_mobile_network_available">No mobile network available</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="speaker">Speaker</string>
    <string name="earpiece">Earpiece</string>
    <string name="choose_audio_route">Choose audio route</string>
    <string name="permission_required_to_make_calls">Permission required to make calls.</string>
    <string name="coming_soon">Coming soon</string>
    <string name="please_wait_ad_loading">Please wait Ad loading</string>
    <string name="do_not_click_accidentally_or_nunintentionally_on_ads">Do not click accidentally or\nunintentionally on Ads</string>
    <string name="please_select_a_future_time">Please select a future time!</string>
    <string name="reminder_saved">Reminder saved!</string>
    <string name="permission_granted_try_sending_sms_again">Permission granted! Try sending SMS again.</string>
    <string name="permission_denied_cannot_send_sms">Permission denied! Cannot send SMS.</string>
    <string name="contacts_imported_successfully">Contacts imported successfully</string>
    <string name="contacts_exported_to_downloads_folder">Contacts exported to Downloads folder</string>
    <string name="this_action_may_contains_ads">This action may contains Ads</string>
    <string name="please_take_a_moment_to_rate_us">Please take a moment to rate us!</string>
    <string name="rate">Rate</string>
    <string name="importing_contacts">Importing contacts</string>
    <string name="import_failed">Import failed</string>
    <string name="exporting_contacts">Exporting contacts</string>
    <string name="export_failed">export failed</string>
    <string name="copy_number">Copy number</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="clear_call_history">Clear Call History</string>
    <string name="clear_history_prompt">Clear all %1$s\'s history?</string>
    <string name="call_history_deleted_successfully">Call history deleted successfully!</string>
    <string name="please_select_at_least_one_contact">Please select at least one contact</string>
    <string name="contact_with_this_name_already_exists">Contact with this name already exists</string>
    <string name="contact_with_this_number_already_exists">Contact with this number already exists</string>
    <string name="number_already_exists_in_list_call_not_placed">Number already exists in list. Call not placed.</string>
    <string name="phone_number_not_found">Phone number not found</string>
    <string name="no_app_available_to_pick_images">No app available to pick images</string>
    <string name="default_dialer_intent_not_supported_on_this_device">Default dialer intent not supported on this device.</string>
    <string name="please_allow_permission_from_settings">Please allow permission from settings.</string>
    <string name="permission_required">Permission Required</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="please_enable_the_required_permissions_from_settings_to_use_this_app">Please enable the required permissions from Settings to use this app.</string>
    <string name="settings">Settings</string>
    <string name="permissions">Permissions</string>
    <string name="tap_on_the_allow_permission_button_for_start_app_in_the_background_when_call_incoming">Tap on the Allow Permission button for start app in the background when call incoming.</string>
    <string name="show_on_lock_screen">Show on Lock screen</string>
    <string name="display_pop_up_windows_while_running_in_the_background">Display pop-up windows while running in the background</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="allow_below_permissions">Allow below permissions</string>
    <string name="background_autostart">Background Autostart</string>
    <string name="ok">OK</string>
    <string name="create_group_under_account">Create Group Under Account</string>
</resources>