<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/permission_required"
        android:textAlignment="center"
        android:textColor="@color/primary_font"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/please_enable_the_required_permissions_from_settings_to_use_this_app"
        android:textAlignment="center"
        android:textColor="@color/primary_font"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_group"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/grey_font"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/btnSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:fontFamily="@font/poppins_medium"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
